# VioRentals

./: .gitignore  README.md  VioRentals.sln  VioRentalsData.db  VioRentalsData.db-shm  VioRentalsData.db-wal  docs.bat  package-lock.json  q  start.bat  tailwind.config.js
Microservices/lucky_user_service/: Cargo.toml  Rocket.toml
Microservices/lucky_user_service/src/: main.rs
Microservices/random_number_service/: Cargo.toml  Rocket.toml
Microservices/recmended_movie_service/: Cargo.toml  Rocket.toml
VioRentals.AuthAPI/: AppSettings.cs  AutoMappingProfile.cs  IJwtUtils.cs  JwtMiddleware.cs  JwtUtils.cs  Program.cs  VioRentals.AuthAPI.csproj  appsettings.json
VioRentals.AuthAPI/Attributes/: AllowAnonymousAttribute.cs  AuthorizeAttribute.cs
VioRentals.AuthAPI/Controllers/: CustomersController.cs  MoviesController.cs  RentalsController.cs  UsersController.cs
VioRentals.AuthAPI/Properties/: launchSettings.json
VioRentals.Core/: Class1.cs  VioRentals.Core.csproj
VioRentals.Core/DTOs/: AuthenticateUserDto.cs  CustomerDto.cs  LoginDto.cs  MappingProfile.cs  MovieDto.cs  NewRentalDto.cs  RegisterDto.cs
VioRentals.Core/Dtos/: CustomerDto.cs  MappingProfile.cs  MovieDto.cs  NewRentalDto.cs
VioRentals.Core/Entities/: BaseEntity.cs  CustomerEntity.cs  GenreEntity.cs  GenreEnum.cs  MovieEntity.cs  (+5 more)
VioRentals.Infrastructure/: Class1.cs  VioRentals - Backup.Infrastructure.csproj  VioRentals.Infrastructure.csproj  VioRentalsData.db
VioRentals.Web/: Program.cs  VioRentals.Web.csproj  appsettings.json  tailwind.config.js
VioRentals.WebAPI/: WeatherForecast.cs
(+141 files in other folders)
