[package]
name = "lucky_user_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "tls", "json"] }
rusqlite = { version = "0.29.0", features = ["bundled-full", "modern-full"] }
